# Urbaxio

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Hello_AI.txt  desktop.ini  et --hard HEAD  register_urbx_icon.reg  vcpkg.json  МОЁ.txt  РИСЁРЧ_ДНЯ.md
cad_kernel/: CMakeLists.txt
cad_kernel/include/cad_kernel/: MeshBuffers.h  cad_kernel.h  cad_kernel_export.h
cad_kernel/src/: TriangulateShape.cpp  cad_kernel.cpp
cmake/: GenerateSnapshot.cmake  GenerateStructure.cmake
engine/: CMakeLists.txt
engine/include/engine/: GeometryMode.h  GpuMesh.h  Material.h  MaterialManager.h  MeshGroup.h  MeshHasher.h  MeshManager.h  SubObjectMovePreviewMesh.h  engine.h  engine_export.h  line.h  scene.h  scene_object.h
engine/include/engine/commands/: CommandManager.h  CreateLineCommand.h  GpuSculptCommand.h  ICommand.h  MoveCommand.h  MoveSubObjectCommand.h  PushPullCommand.h  SculptCommand.h  VoxelizeCommand.h
engine/include/engine/geometry/: BRepGeometry.h  IGeometry.h  MeshGeometry.h  VolumetricGeometry.h  VoxelGrid.h
engine/include/engine/gpu/: DynamicGpuHashGrid.h  GpuAabbKernels.h  GpuMeshingKernels.h  GpuRaycastKernels.h  GpuSculptKernels.h  GpuVoxelConverter.h  GpuVoxelManager.h
engine/src/: MaterialManager.cpp  MeshManager.cpp  engine_main.cpp  scene.cpp  scene_object.cpp
engine/src/commands/: CommandManager.cpp  CreateLineCommand.cpp  GpuSculptCommand.cpp  MoveCommand.cpp  MoveSubObjectCommand.cpp  PushPullCommand.cpp  SculptCommand.cpp  VoxelizeCommand.cpp
engine/src/geometry/: BRepGeometry.cpp  MeshGeometry.cpp  VolumetricGeometry.cpp
engine/src/gpu/: CMakeLists.txt  DynamicGpuHashGrid.cu  GpuAabbKernels.cu  GpuMeshingKernels.cu  GpuRaycastKernels.cu  GpuSculptKernels.cu  GpuVoxelConverter.cpp  GpuVoxelManager.cu  HashGridMeshing.cu  MeshManagerGpu.cu
engine/tests/: FaceSplitSmokeTest.cpp  MoveSubObjectSmokeTest.cpp
qt_shell/: controller.py  main.py  run_shell.cmd
qt_shell/qml/: MainMenu.qml
resources/: .gitignore  README.md  font.json  futura_book.json  futura_demi.json  futura_medium.json  resources.h  urbaxio.rc
resources/ui/: menu.rcss  menu.rml
shell/: CMakeLists.txt  main.cpp
shell/include/: DesktopCapture.h  Framebuffer.h  Frustum.h  LoadingManager.h  TextRenderer.h  UrbaxioUI.h  VRManager.h  Voxelizer.h  camera.h  file_io.h  input_handler.h  renderer.h  snapping.h
shell/include/tools/: GpuSculptTool.h  ITool.h  LineTool.h  MoveTool.h  PaintTool.h  PushPullTool.h  SculptTool.h  SelectTool.h  ToolManager.h  VrDrawTool.h
shell/include/ui/: IVRWidget.h  Layouts.h  VRButtonWidget.h  VRConfirmButtonWidget.h  VRDisplayWidget.h  VRMenuSphereWidget.h  VRPanel.h  VRScrollWidget.h  VRSliderWidget.h  VRTextureWidget.h  VRToggleWidget.h  VRToolButtonWidget.h  VRUIManager.h
shell/include/vr_ui/: IVRWidget.h  VRBillboardButton.h  VRPanel.h  VRTextButton.h  VRTextDisplay.h  VRUICommon.h  VRUIManager.h  VRWidget.h
shell/src/: DesktopCapture.cpp  Framebuffer.cpp  LoadingManager.cpp  TextRenderer.cpp  VRManager.cpp  Voxelizer.cpp  camera.cpp  file_io.cpp  input_handler.cpp  renderer.cpp  snapping.cpp
shell/src/tools/: GpuSculptTool.cpp  LineTool.cpp  MoveTool.cpp  PaintTool.cpp  PushPullTool.cpp  SculptTool.cpp  SelectTool.cpp  ToolManager.cpp  VrDrawTool.cpp
shell/src/ui/: Layouts.cpp  UrbaxioUI.cpp  VRButtonWidget.cpp  VRConfirmButtonWidget.cpp  VRDisplayWidget.cpp  VRMenuSphereWidget.cpp  VRPanel.cpp  VRScrollWidget.cpp  VRSliderWidget.cpp  VRTextureWidget.cpp  VRToggleWidget.cpp  VRToolButtonWidget.cpp  VRUIManager.cpp
shell/src/vr_ui/: VRBillboardButton.cpp  VRPanel.cpp  VRTextButton.cpp  VRTextDisplay.cpp  VRUIManager.cpp  VRWidget.cpp
shell/tests/: MoveToolPathSmokeTest.cpp
tools/: CMakeLists.txt
tools/include/tools/: ITool.h  LineTool.h  PushPullTool.h  ToolManager.h
tools/src/: LineTool.cpp  PushPullTool.cpp  SelectTool.cpp  ToolManager.cpp
